--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/pail": "^1.2",
