--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,12 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
         "bezhansalleh/filament-shield": "^3.3",
+        "chrisreedio/socialment": "^3.10",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/pail": "^1.2",
         "laravel/tinker": "^2.9",
+        "socialiteproviders/google": "^4.1",
         "timokoerber/laravel-one-time-operations": "^1.4"
     },
     "require-dev": {
