--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,8 @@ DEBUGBAR_ENABLED=true
 DEFAULT_USER_NAME="John Doe"
 DEFAULT_USER_EMAIL="admin@example.com"
 DEFAULT_USER_PASSWORD="password"
+
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
