--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/framework": "^11.9",
         "laravel/pail": "^1.2",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "socialiteproviders/google": "^4.1",
         "timokoerber/laravel-one-time-operations": "^1.4"
     },
